<resources>
    <string name="app_name">IntentsProj</string>

    <string name="num1">Number 1 :</string>
    <string name="num2">Number 2 :</string>
    <string name="okBtn">OK</string>
    <string name="ans">Answer</string>
    <string name="addBtn">+</string>
    <string name="substractBtn">-</string>
    <string name="multiplyBtn">x</string>
    <string name="divideBtn">/</string>

</resources>